# biblia_json

./: README.md  copy_bibliacatolica.py  copy_bibliaonline.py  copy_bkjf.py  copy_catolica_aparecida.py  copy_catolica_pastoral.py  copy_comentarios.py  copy_ev_nicodemos.py  copy_pastorhermas.py  copy_refs.py  copy_tnm.py  fetch_books.py  pyproject.toml  verify_content.py
json/: books.json
json/apocrifos/pt-br/pastor-hermas/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  (+74 more)
json/bhs/bhs/1cr/: 1.json  10.json  11.json  13.json  14.json  15.json  16.json  18.json  2.json  20.json  25.json  28.json  29.json  4.json  5.json  7.json  8.json  9.json
json/bhs/bhs/1rs/: 1.json  12.json  14.json  15.json  17.json  20.json  21.json  22.json  5.json  6.json  9.json
json/bhs/bhs/1sm/: 11.json  13.json  14.json  18.json  19.json  2.json  20.json  21.json  22.json  26.json  3.json  (+6 more)
json/refs/: 1co.json  1cr.json  1jo.json  1pe.json  1rs.json  1sm.json  1tm.json  1ts.json  2co.json  2cr.json  2jo.json  2pe.json  2rs.json  2sm.json  2tm.json  2ts.json  3jo.json  ag.json  am.json  ap.json  at.json  cl.json  ct.json  dn.json  dt.json  ec.json  ed.json  ef.json  et.json  ex.json  ez.json  fm.json  fp.json  gl.json  gn.json  hb.json  hc.json  is.json  jd.json  jl.json  (+26 more)
(+14068 files in other folders)
